# testproject2

./: API.rst  AUTHORS.rst  README.rst  micc3.cfg  pyproject.toml  test2.sh
docs/: Makefile  conf.py  index.rst  installation.rst
testproject2/: __init__.py
tests/: __init__.py
tests/testproject2/: test_testproject2.py
