[tool.poetry]
name = "testproject2"
version = "0.0.0"
description = "<Enter a one-sentence description of this project here.>"
authors = ["Wouter Kruijsse <wouter.kruijsse@student.uantwerpen.be>"]
license = "MIT"

readme = 'README.rst'

repository = "https://github.com/WouterKruijsse/testproject2"
homepage = "https://github.com/WouterKruijsse/testproject2"

keywords = []

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
